changed models architecture
